# codeas

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  agents.ipynb  backup.txt  demo.py  output.txt  pyproject.toml  requirements.txt  test.ipynb  ui.py
.codeas/: abstreet_repo_state.pkl  codeas_repo_state.pkl  metadata.json  repo_attributes.json
.codeas/outputs/: api.json  architecture.json  deployment.json  deployment_strategy.json  generated_diffs.json  generated_tests.json  project_overview.json  proposed_changes.json  refactoring_groups.json  setup_and_development.json  testing.json  testing_strategy.json  ui.json
.codeas/page_filters/: filters.json
abstreet/.codeas/: metadata.json  repo_attributes.json
abstreet/.codeas/outputs/: api.json  architecture.json  deployment.json  deployment_strategy.json  project_overview.json  setup_and_development.json  terraform_code.json  testing.json  ui.json
assets/prompt-library/: additional_instructions.yaml  context.yaml  generate-docstring.yaml  request.yaml  tone.yaml
assets/prompt-library/add-instruct/: encapsulate-code.txt  follow-clean-code.txt  return-code-only.txt  return-entire-code.txt
assets/prompt-library/components/: context.yaml  request.yaml  tone.yaml
assets/prompt-library/context/: modify-codebase.txt  {code}.txt
assets/prompt-library/generics/: generic.yaml
assets/prompt-library/request/: generate-docstrings.txt  {user-input}.txt
assets/prompt-library/structure/: explain-structure.txt
demo/src/: pipeline.py
docs/: IDi_documentacion.md  arquitectura.md
dummy_repo/: hello.py
examples/configs/: guidelines.yaml  preprompts.yaml
examples/ml_repo_m/: main.py
notebooks/: codebase_assistant.ipynb  debug.ipynb  demo.ipynb
scripts/: debug.py  vs-debug.py
src-test/: module_test.py  test.py
src/codeas/: _templates.py  agents.py  assistant.py  chat.py  cli.py  cli_inputs.py  codebase.py  commands.py  configs.py  console.py  entities.py  file_handler.py  function_calls.py  initializer.py  main.py  repomap.py  request.py  terminal.py  thread.py  tools.py  ts_assistant.py  ts_codebase.py  ts_entities.py  utils.py
src/divergen/: __init__.py  _prompts.py  _search_mixin.py  assistant.py  cli.py  cli_inputs.py  codebase.py  codebase_assistant.py  codebase_manager.py  config.py  entities.py  file_handler.py  initializer.py  prompt_builder.py  prompt_manager.py  request.py  retrievers.py  templates.py  ts_codebase_assistant.py  utils.py
tests/: agent.py  pipeline.py  test_assistant.py  test_codebase.py  test_request.py  utils.py
ui/: ui.py
(+144 files in other folders)
