[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "divergen"
authors = [
    {name = "Manuel Renner", email = "manuel.renner@diverger.ai"},
]
description = "Improve your codebase with LLMs using the right context for the right prompts."
requires-python = ">=3.9"
dynamic = ["version", "readme", "dependencies"]

[project.scripts]
divergen = 'divergen.cli:app'

[tool.setuptools.dynamic]
version = {attr = "divergen.__version__"}
readme = {file=["README.md"], content-type="text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"

[tool.ruff.per-file-ignores]
"src/divergen/cli.py" = ["E402"]