[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "codeas"
authors = [
    {name = "Manuel Renner", email = "manuel.renner@diverger.ai"},
]
license = {text = "MIT License"}
description = "Improve your codebase with LLMs using the right context for the right prompts."
requires-python = ">=3.9,<3.12"
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Source = 'https://github.com/DivergerThinking/codeas'
Homepage = 'https://diverger.ai'

[project.scripts]
codeas = 'codeas.terminal:start_terminal'

[tool.setuptools.dynamic]
version = {attr = "codeas.__version__"}
readme = {file=["README.md"], content-type="text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"

[tool.ruff.lint.per-file-ignores]
"src/codeag/ui/Home.py" = ["F401"]