[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "codeas"
authors = [
    {name = "Manuel Renner", email = "manuel.renner@diverger.ai"},
    {name = "Diverger Thinking", email = "info@diverger.ai"},
]
license = {text = "MIT License"}
description = "Boost your software development processes with generative AI."
requires-python = ">=3.9,<3.12"
dynamic = ["version", "readme", "dependencies"]

[project.urls]
Source = 'https://github.com/DivergerThinking/codeas'
Homepage = 'https://diverger.ai'

[project.scripts]
codeas = 'codeas.main:start_ui'

[tool.setuptools.dynamic]
version = {attr = "codeas.__version__"}
readme = {file=["README.md"], content-type="text/markdown"}
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile = "black"

[tool.ruff.lint.per-file-ignores]
"src/codeas/ui/page_ui.py" = ["F401"]